fix: hide focusable elements inside collapsed content

--- a/src/components/controls/Collapse/Collapse.module.scss
+++ b/src/components/controls/Collapse/Collapse.module.scss
@@ -12,4 +12,13 @@
     text-align: left;
     width: 100%;
   }
+
+  // Focusable elements inside a collapsed section must be hidden
+  // https://dequeuniversity.com/rules/axe/4.1/aria-hidden-focus
+  :not(span)[aria-hidden='true'] {
+    [href],
+    :not([disabled]) {
+      display: none;
+    }
+  }
 }
